fix: simplify card, byline, and English translation.json schema

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -33,12 +33,10 @@ time #}
                 <div class="post-full-author-header">
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         {% if post.original_post %}
-                            {# To do: Figure out original article source and add to post.original_post.primary_author
-                                as language code (en, zh, etc.) and use that to show original article source [ex: (English)]  #}
-                            {{ byline(post.original_post.primary_author, site.lang, false, false, 'author') }}
-                            {{ byline(post.primary_author, site.lang, false, false, 'translator') }}
+                            {{ byline(post.original_post.primary_author, false, false, 'author', post.original_post.locale_i18n) }}
+                            {{ byline(post.primary_author, false, false, 'translator') }}
                         {% else %}
-                            {{ byline(post.primary_author, site.lang, false, false) }}
+                            {{ byline(post.primary_author, false, false) }}
                         {% endif %}
                     {% endif %}
                 </div>
@@ -73,12 +71,10 @@ time #}
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         <div class="post-full-author-header">
                             {% if post.original_post %}
-                                {# To do: Figure out original article source and add to post.original_post.primary_author
-                                as language code (en, zh, etc.) and use that to show original article source [ex: (English)]  #}
-                                {{ byline(post.original_post.primary_author, site.lang, true, true, 'author') }}
-                                {{ byline(post.primary_author, site.lang, true, true, 'translator') }}
+                                {{ byline(post.original_post.primary_author, true, true, 'author', post.original_post.locale_i18n) }}
+                                {{ byline(post.primary_author, true, true, 'translator') }}
                             {% else %}
-                                {{ byline(post.primary_author, site.lang, true, true) }}
+                                {{ byline(post.primary_author, true, true) }}
                             {% endif %}
                         </div>
                         <hr />
