--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -1,7 +1,5 @@
-{% set i18nSocialRowTwitterKey = 'social-row.author-has-twitter' if post.primary_author.twitter else 'social-row.author-no-twitter' %}
-
 <p data-test-label="social-row" class="social-row">
-    {% t i18nSocialRowTwitterKey, {
+    {% t 'social-row.tweet-a-thanks', {
         '<0>': '<button id="tweet-btn" class="cta-button" data-test-label="tweet-button">',
         '</0>': '</button>',
         interpolation: {
