fix: update post i18n tests

--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -4,7 +4,7 @@
     {% set tweetCTAKey = 'social-row.cta.tweet-it' %}
 {% endif %}
 
-<p data-test-label="social-row" class="social-row">
+<p data-test-label="social-row-cta" class="social-row">
     {% t tweetCTAKey, {
         '<0>': '<button id="tweet-btn" class="cta-button" data-test-label="tweet-button">',
         '</0>': '</button>',
