feat: add data-test-labels for card, byline, and author list content, add tests for landing page

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -9,7 +9,9 @@
             author.name,
             "150px",
             [150],
-            author.image_dimensions.profile_image
+            author.image_dimensions.profile_image,
+            "profile-image",
+            null
         %}
     {% else %}
         <span class="avatar-wrapper">
