--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -14,6 +14,7 @@
                 "60px",
                 [60],
                 authorOrTranslator.image_dimensions.profile_image,
+                "profile-image",
                 lazyLoad
             %}
         {% else %}
