--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -19,6 +19,7 @@
                      92vw",
                     [300, 600, 1000, 2000],
                     post.image_dimensions.feature_image,
+                    "feature-image",
                     lazyLoad
                 %}
             </a>
