--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -30,7 +30,7 @@ time #}
                     </section>
                     <h1 class="post-full-title">{{ title }}</h1>
                 </header>
-                <div class="post-full-author-header">
+                <div class="post-full-author-header" data-test-label="author-header-no-bio">
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         {% if post.original_post %}
                             {{ byline(post.original_post.primary_author, false, false, 'author', post.original_post.locale_i18n) }}
@@ -69,7 +69,7 @@ time #}
                     </div>
                     <hr />
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
-                        <div class="post-full-author-header">
+                        <div class="post-full-author-header" data-test-label="author-header-with-bio">
                             {% if post.original_post %}
                                 {{ byline(post.original_post.primary_author, true, true, 'author', post.original_post.locale_i18n) }}
                                 {{ byline(post.primary_author, true, true, 'translator') }}
