--- a/src/_includes/partials/role-list-item.njk
+++ b/src/_includes/partials/role-list-item.njk
@@ -26,7 +26,7 @@
             {% endif %}
         </a>
         <span class="meta-content">
-            <a class="meta-item" href="{{ authorOrTranslatorURL }}" data-test-label="{{ 'profile-link' }}">
+            <a class="meta-item" href="{{ authorOrTranslatorURL }}" data-test-label="profile-link">
                 {% if role === 'author' %}
                     {% t 'original-author-translator.roles.author', {
                         name: authorOrTranslator.name,
