--- a/src/_includes/partials/prism.njk
+++ b/src/_includes/partials/prism.njk
@@ -66,3 +66,5 @@
     src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-typescript.min.js"></script>
 <script defer type="text/javascript"
     src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-yaml.min.js"></script>
+<script defer type="text/javascript"
+    src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-dart.min.js"></script>
