fix: update function name from createJsonLd to createJSONLD

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -55,5 +55,5 @@
 {% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'author', site, author %}</script>
+    <script type="application/ld+json">{% createJSONLD 'author', site, author %}</script>
 {% endblock %}
