--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -105,5 +105,5 @@
 {% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'article', site, doc %}</script>
+    <script type="application/ld+json">{% createJSONLD 'article', site, doc %}</script>
 {% endblock %}
