--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -175,5 +175,5 @@ time #}
 {% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'article', site, post %}</script>
+    <script type="application/ld+json">{% createJSONLD 'article', site, post %}</script>
 {% endblock %}
