--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -64,5 +64,5 @@
 {% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'tag', site, tag %}</script>
+    <script type="application/ld+json">{% createJSONLD 'tag', site, tag %}</script>
 {% endblock %}
