--- a/src/index.njk
+++ b/src/index.njk
@@ -31,5 +31,5 @@ pagination:
 {% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'index', site %}</script>
+    <script type="application/ld+json">{% createJSONLD 'index', site %}</script>
 {% endblock %}
