--- a/src/_includes/layouts/amp.njk
+++ b/src/_includes/layouts/amp.njk
@@ -52,7 +52,7 @@
     <meta property="og:image:width" content="{{ post.image_dimensions.feature_image.width }}">
     <meta property="og:image:height" content="{{ post.image_dimensions.feature_image.height }}">
 
-    <script type="application/ld+json">{% createJsonLd 'article', site, post %}</script>
+    <script type="application/ld+json">{% createJSONLD 'article', site, post %}</script>
 
     <meta name="generator" content="Eleventy">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url + "/rss/" }}">
