--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -1,7 +1,11 @@
-{% set i18nSocialRowTwitterKey = 'social-row.author-has-twitter' if post.primary_author.twitter else 'social-row.author-no-twitter' %}
+{% if post.primary_author.twitter or post.original_post.primary_author.twitter %}
+    {% set tweetCTAKey = 'social-row.cta.tweet-a-thanks' %}
+{% else %}
+    {% set tweetCTAKey = 'social-row.cta.tweet-it' %}
+{% endif %}
 
-<p data-test-label="social-row" class="social-row">
-    {% t i18nSocialRowTwitterKey, {
+<p data-test-label="social-row-cta" class="social-row">
+    {% t tweetCTAKey, {
         '<0>': '<button id="tweet-btn" class="cta-button" data-test-label="tweet-button">',
         '</0>': '</button>',
         interpolation: {
