fix: rename function to generate AMP HTML, append banner ad HTML as banner_ad_html to main post object

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -77,7 +77,7 @@
                     {% endif %}
                 </section>
                 {% if adsEnabled %}
-                    {{ post.banner_ad | safe }}
+                    {{ post.banner_ad_html | safe }}
                 {% endif %}
             </article>
         </div>
