fix: broken AMP tests

--- a/src/_includes/layouts/amp.njk
+++ b/src/_includes/layouts/amp.njk
@@ -91,7 +91,7 @@
 <body class="amp-template">
     <header class="main-header">
         <nav class="blog-title">
-            <a href="{{ site.url }}" class="logo">
+            <a href="{{ site.url }}" class="logo" data-test-label="site-nav-logo">
                 <amp-img src="{{ site.logo }}"
                     layout="fixed"
                     height="24px"
