fix: only use CSS to control ad sizes, and remove data-test-label attributes from Google ad scripts

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2399,6 +2399,8 @@ a.banner:hover span {
   text-align: center;
   min-width: 300px;
   min-height: 250px;
+  max-width: 336px;
+  max-height: 280px;
   padding: 10px;
 }
 
