--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,11 +6,7 @@
 {% set codeinjection_head = post.codeinjection_head %}
 {% set codeinjection_foot = post.codeinjection_foot %}
 {% set primaryTag = post.tags[0] %}
-{% set adsEnabled = (secrets.adsEnabled === 'true') and (site.lang !== 'zh') %}
-{# Include 2 ads by default for all articles. Then add 1 ad for every 2 mins of
-reading time if reading time <= 4 mins. Else, add 1 ad for every 1 min of reading
-time #}
-{% set numOfSidebarAds = (((post.reading_time / 2) if post.reading_time <= 4 else (post.reading_time)) + 2) | round(0, 'floor') %}
+{% set adsEnabled = secrets.adsEnabled %}
 
 {% block content %}
     <main id="site-main" class="post-template site-main outer">
@@ -55,18 +51,9 @@ time #}
                     </figure>
                 {% endif %}
                 <section class="post-full-content">
-                    <div class="post-and-sidebar">
-                        <section class="post-content {{ "medium-migrated-article" if (post.primary_author.name === "freeCodeCamp.org") }}">
-                            {{ content | safe }}
-                        </section>
-                        {% if adsEnabled %}
-                            <div class="sidebar">
-                                {% for i in range(0, numOfSidebarAds) %}
-                                    {% include "partials/ad.njk" %}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
+                    <section class="post-content {{ "medium-migrated-article" if (post.primary_author.name === "freeCodeCamp.org") }}">
+                        {{ content | safe }}
+                    </section>
                     <hr />
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         <div class="post-full-author-header" data-test-label="author-header-with-bio">
@@ -89,12 +76,10 @@ time #}
                         {% include "partials/learn-cta-row.njk" %}
                     {% endif %}
                 </section>
+                {% if adsEnabled %}
+                    {{ post.banner_ad_html | safe }}
+                {% endif %}
             </article>
-            {% if adsEnabled %}
-                <div class="banner-ad bottom">
-                    {% include "partials/ad.njk" %}
-                </div>
-            {% endif %}
         </div>
     </main>
 {% endblock %}
@@ -122,7 +107,7 @@ time #}
             crossorigin="anonymous"
             async
         ></script>
-        <script defer src="{% cacheBuster '/assets/js/toggle-ad-layout.js' %}"></script>
+        <script data-test-label="toggle-ad-layout" defer src="{% cacheBuster '/assets/js/toggle-ad-layout.js' %}"></script>
     {% endif %}
 {% endblock %}
 
