fix: simplify further and remove original locale entirely

--- a/src/_includes/layouts/amp.njk
+++ b/src/_includes/layouts/amp.njk
@@ -113,8 +113,7 @@
                             {% if post.original_post %}
                                 <p class="author" data-test-label="amp-author">
                                     {% t 'original-author-translator.roles.author', {
-                                        name: post.original_post.primary_author.name,
-                                        locale: (post.original_post.locale_i18n | title)
+                                        name: post.original_post.primary_author.name
                                     } %}
                                 </p>
                                 <p class="translator" data-test-label="amp-translator">
