--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -29,7 +29,7 @@
                 <div class="post-full-author-header" data-test-label="author-header-no-bio">
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         {% if post.original_post %}
-                            {{ byline(post.original_post.primary_author, false, false, 'author', post.original_post.locale_i18n) }}
+                            {{ byline(post.original_post.primary_author, false, false, 'author') }}
                             {{ byline(post.primary_author, false, false, 'translator') }}
                         {% else %}
                             {{ byline(post.primary_author, false, false) }}
@@ -58,7 +58,7 @@
                     {% if post.primary_author.name != "freeCodeCamp.org" %}
                         <div class="post-full-author-header" data-test-label="author-header-with-bio">
                             {% if post.original_post %}
-                                {{ byline(post.original_post.primary_author, true, true, 'author', post.original_post.locale_i18n) }}
+                                {{ byline(post.original_post.primary_author, true, true, 'author') }}
                                 {{ byline(post.primary_author, true, true, 'translator') }}
                             {% else %}
                                 {{ byline(post.primary_author, true, true) }}
