--- a/src/_includes/partials/role-list-item.njk
+++ b/src/_includes/partials/role-list-item.njk
@@ -1,4 +1,4 @@
-{% macro roleListItem(authorOrTranslator, publishedAt, role, locale) %}
+{% macro roleListItem(authorOrTranslator, publishedAt, role) %}
     {# Use the full URL for original authors, and a relative path for
     translators and regular authors #}
     {% set authorOrTranslatorURL = authorOrTranslator.url if role === "author" else (authorOrTranslator.path | url) %}
