fix: go back to auto ad format method, adjust min and max width and height for ad container / wrapper

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2373,19 +2373,15 @@ a.banner:hover span {
   background-color: var(--gray05);
   text-align: center;
   padding: 10px;
-}
-
-.ad-container ins {
-  min-width: 300px;
-  max-width: 740px; /* Max width of main content area */
+  min-width: 336px;
+  max-width: 740px; /* Max width of inner main content area */
   width: 100%;
-  min-height: 250px;
+  min-height: 280px;
   max-height: 480px; /* Consider increasing to 600px to allow half page unit ads */
-  height: 100%;
 }
 
-.ad-container.banner ins {
-  min-width: 100%; /* Enables larger banner size of ~1020 x 250 */
+.ad-container.banner {
+  min-width: 100%;
 }
 
 /* Apply the following styles for unauthenticated readers */
