fix: amp ads (#404)
* fix: simplify AMP ad styling

* fix: change ad-text span to div, add bottom margin

* fix: improve method for applying allowed attributes to amp elements

* feat: move amp helper functions for tests into a separate file

* fix: remove fallback to empty string when using adsense placeholders

* fix: improve method to test for allowed AMP attributes in Cypress tests

* feat: add tests for amp ads

* fix: bump up amp-ad height

* fix: adjust tests

* fix: adjust max-width and remove limits on height for amp container elements

* fix: set explicit width and height for amp-ad elements, but use responsive ads similar to regular pages

* fix: set data-full-width attribute to false for amp-ad elements

* fix: only use rectangular ads on regular pages, add more tests

* fix: go back to something closer to the example for adsense amp-ads

* fix: remove data-ad-format from amp-ads

* fix: adjust amp-ad attribute tests

* fix: go back to 100vw and 320 height for responsive amp-ads

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2374,10 +2374,9 @@ a.banner:hover span {
   text-align: center;
   padding: 10px;
   min-width: 336px;
-  max-width: 740px; /* Max width of inner main content area */
+  max-width: 100%;
   width: 100%;
   min-height: 280px;
-  max-height: 480px; /* Consider increasing to 600px to allow half page unit ads */
 }
 
 .ad-container.banner {
@@ -2395,6 +2394,7 @@ a.banner:hover span {
 
 .ad-container .ad-text {
   font-size: 16px;
+  margin-bottom: 10px;
 }
 
 /* 17. RTL layout
